--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   webview_flutter: ^4.2.1
+  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_test:
