--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.5
   webview_flutter: ^4.2.1
   flutter_svg: ^2.0.5
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
