--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   get: ^4.6.5
   webview_flutter: ^4.2.1
   flutter_svg: ^2.0.5
+  logger: ^2.0.2+1
+  flutter_screenutil: ^5.9.0
+  dio: ^5.3.3
+  pretty_dio_logger: ^1.3.1
+  get_storage: ^2.1.1
+  shared_preferences: ^2.2.2
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
@@ -76,17 +83,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: SUITE
+      fonts:
+        - asset: fonts/SUITE-Light.ttf
+        - asset: fonts/SUITE-Regular.ttf
+        - asset: fonts/SUITE-Medium.ttf
+        - asset: fonts/SUITE-SemiBold.ttf
+        - asset: fonts/SUITE-Bold.ttf
+        - asset: fonts/SUITE-ExtraBold.ttf
+        - asset: fonts/SUITE-Heavy.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
