--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   webview_flutter: ^4.2.1
-  flutter_svg: ^2.0.5
+  flutter_svg: ^2.0.7
   logger: ^2.0.2+1
   flutter_screenutil: ^5.9.0
   dio: ^5.3.3
@@ -70,7 +70,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - images/social.svg
+    - images/more.svg
+    - images/search.svg
+    - images/home.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
