--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,10 +70,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/social.svg
-    - images/more.svg
-    - images/search.svg
-    - images/home.svg
+    - images/icon_social.svg
+    - images/icon_more.svg
+    - images/icon_home.svg
+    - images/icon_search.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
