--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   get_storage: ^2.1.1
   shared_preferences: ^2.2.2
   fluttertoast: ^8.2.2
+  http: ^1.1.0
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
