--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   http: ^1.1.0
   html: ^0.15.4
   retrofit_generator: ^8.0.4
+  retrofit: ^4.0.3
 
 dev_dependencies:
   flutter_test:
